assignments/twitch/RW-Twitch/src/styles/styles.scss
#react-container {
  display: block;
  margin: 0;
}

.page-sidebar {
  background-color: #6441A4;
  height: 100%;
  width: 15vw;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  overflow-x: hidden;
}

.content {
  h1 { 
    color: #FFF;
    margin-top: 0 !important;
  }
  padding-top: 2vh;
  background-color: gray;
  top: 0;
  height: 100%;
  width: 85%;
  margin-left: 15vw;
}

.title {
  margin: 5px;
}

.Logo {
  width: 65%;
  height: auto;
  margin: 0 auto;
  padding-top: 10px;
}

.StreamCard {
  text-align: center;
  padding: 1vh 1vh;
  border: black 1px;
  border-style: solid;
  margin-left: 1vw;
  background-color: #FFF;
}

.StreamRow {
  display: flex;
  float: none;
  margin: 1vh auto;
}

.StreamContainer{
  width: 75%;
  float: none;
  margin: 0 auto;
}

